# sidc

./: .gitignore  AUTHORS  Makefile  Makefile.in  README  README.rst  config.h  config.h.in  config.status  configure  configure.ac  sidc.c  sidc.conf  sidc.logrotate  sidc.service  sidc.spec  sidc.sysconf  sidc.tmpfiles  sidd  sidd.c  sidd.conf  sidd.conf.pws192  sidd.conf.pws48
init_scripts/: README.rst  debian_init  debian_sidc  rh_init
